[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "twilight-zone-agent"
version = "0.1.0"
description = "Personal Research Agent / Twilight Zone"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
twilight-zone = "twilight_zone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
